--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,12 @@
   <description>TODO: Package description</description>
   <maintainer email="emma@brassville.com">emma</maintainer>
   <license>Apache-2.0</license>
+
+    <!-- Build dependencies -->
+  <build_depend>rosidl_default_generators</build_depend>
+  <build_depend>ament_cmake</build_depend>
+  
+  <!-- Executable dependencies -->
   <exec_depend>community_interfaces</exec_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
